Fix style on mobile

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -47,7 +47,7 @@ a.text-dark:hover {
   .display-3 {
     font-size: 3.5rem;
   }
-  .article-post {
+  .container-lg {
     padding: 1rem;
   }
 }
